package models_test

import (
	"testing"
	"time"

	"wealthjourney/domain/models"
	investmentv1 "wealthjourney/protobuf/v1"
)

func TestInvestmentTransaction_TableName(t *testing.T) {
	tx := &models.InvestmentTransaction{}
	if tx.TableName() != "investment_transaction" {
		t.Errorf("Expected table name 'investment_transaction', got '%s'", tx.TableName())
	}
}

func TestInvestmentLot_TableName(t *testing.T) {
	lot := &models.InvestmentLot{}
	if lot.TableName() != "investment_lot" {
		t.Errorf("Expected table name 'investment_lot', got '%s'", lot.TableName())
	}
}

func TestInvestmentTransaction_BuyUpdatesLot(t *testing.T) {
	// Initial lot: 1.0 units at $50,000 each (crypto with 8 decimals)
	// Quantity: 100,000,000 = 1.00000000 BTC
	// AverageCost: 500 = cost per satoshi in smallest currency unit
	// TotalCost: 50,000,000,000 = $50,000 total cost basis
	lot := &models.InvestmentLot{
		InvestmentID:      1,
		Quantity:          100000000, // 1.00000000 BTC
		RemainingQuantity: 100000000,
		AverageCost:       500,       // $50,000 / 100,000,000 satoshis = $0.0005 per satoshi
		TotalCost:         50000000000, // $50,000 total cost basis
		PurchasedAt:       time.Now(),
	}

	// Buy transaction: 0.5 units at $55,000 each
	// Quantity: 50,000,000 = 0.50000000
	// Cost: 27,500,000,000 = 0.5 * $55,000 = $27,500
	tx := &models.InvestmentTransaction{
		InvestmentID: 1,
		Type:         int32(investmentv1.InvestmentTransactionType_INVESTMENT_TRANSACTION_TYPE_BUY),
		Quantity:     50000000, // 0.50000000
		Price:        55000000000, // $55,000 per BTC
		Cost:         27500000000, // $27,500
	}

	// After buy, lot should increase
	lot.Quantity += tx.Quantity
	lot.RemainingQuantity += tx.Quantity
	lot.TotalCost += tx.Cost
	lot.AverageCost = lot.TotalCost / lot.Quantity

	expectedQuantity := int64(150000000) // 1.0 + 0.5 = 1.5
	if lot.RemainingQuantity != expectedQuantity {
		t.Errorf("Expected remaining quantity %d, got %d", expectedQuantity, lot.RemainingQuantity)
	}

	expectedTotalCost := int64(77500000000) // $50,000 + $27,500 = $77,500
	if lot.TotalCost != expectedTotalCost {
		t.Errorf("Expected total cost %d, got %d", expectedTotalCost, lot.TotalCost)
	}

	// New average cost: $77,500 / 1.5 BTC / 100,000,000 satoshis per BTC
	// = $77,500 / 150,000,000 satoshis
	// = $0.00051666... per satoshi
	// = 516 in smallest currency unit (assuming 2 decimal places for currency)
	if lot.AverageCost <= 500 || lot.AverageCost >= 600 {
		t.Errorf("Expected average cost around 516, got %d", lot.AverageCost)
	}
}

func TestInvestmentTransaction_SellReducesLot(t *testing.T) {
	// Initial lot: 100 units at 50.00 each
	lot := &models.InvestmentLot{
		InvestmentID:      1,
		Quantity:          100000000,
		RemainingQuantity: 100000000,
		AverageCost:       50000000000,
		TotalCost:         5000000000000,
		PurchasedAt:       time.Now(),
	}

	// Sell transaction: 30 units
	sellQuantity := int64(30000000) // 30.00000000

	// After sell, remaining quantity should decrease
	lot.RemainingQuantity -= sellQuantity

	expectedRemaining := int64(70000000) // 100 - 30
	if lot.RemainingQuantity != expectedRemaining {
		t.Errorf("Expected remaining quantity %d, got %d", expectedRemaining, lot.RemainingQuantity)
	}

	// Total quantity and average cost should stay the same
	if lot.Quantity != 100000000 {
		t.Errorf("Total quantity should remain unchanged, got %d", lot.Quantity)
	}

	if lot.AverageCost != 50000000000 {
		t.Errorf("Average cost should remain unchanged, got %d", lot.AverageCost)
	}
}

func TestInvestmentLot_PreventsNegativeRemaining(t *testing.T) {
	lot := &models.InvestmentLot{
		InvestmentID:      1,
		Quantity:          100000000,
		RemainingQuantity: 100000000,
		AverageCost:       50000000000,
		TotalCost:         5000000000000,
		PurchasedAt:       time.Now(),
	}

	// Try to sell more than available
	lot.RemainingQuantity = -50000000

	// BeforeUpdate hook should prevent negative
	// In actual usage, GORM would call BeforeUpdate
	// For test, we just verify the field can be set negative
	// The hook will prevent it in real usage
	if lot.RemainingQuantity >= 0 {
		t.Log("Note: Remaining quantity can be set negative in struct, but GORM hook will prevent database update")
	}
}

func TestInvestmentTransaction_ToProto(t *testing.T) {
	now := time.Now()
	var lotID int32 = 123

	tx := &models.InvestmentTransaction{
		ID:              1,
		InvestmentID:    10,
		WalletID:        5,
		Type:            int32(investmentv1.InvestmentTransactionType_INVESTMENT_TRANSACTION_TYPE_BUY),
		Quantity:        100000000,
		Price:           50000000000,
		Cost:            5000000000000,
		Fees:            100000000,
		TransactionDate: now,
		Notes:           "Test transaction",
		LotID:           &lotID,
		RemainingQuantity: 100000000,
		CreatedAt:       now,
		UpdatedAt:       now,
	}

	proto := tx.ToProto()

	if proto.Id != int32(1) {
		t.Errorf("Expected ID 1, got %d", proto.Id)
	}

	if proto.InvestmentId != int32(10) {
		t.Errorf("Expected InvestmentID 10, got %d", proto.InvestmentId)
	}

	if proto.WalletId != int32(5) {
		t.Errorf("Expected WalletID 5, got %d", proto.WalletId)
	}

	if proto.Type != investmentv1.InvestmentTransactionType_INVESTMENT_TRANSACTION_TYPE_BUY {
		t.Errorf("Expected BUY type, got %v", proto.Type)
	}

	if proto.LotId != lotID {
		t.Errorf("Expected LotID %d, got %d", lotID, proto.LotId)
	}

	if proto.RemainingQuantity != int32(100000000) {
		t.Errorf("Expected RemainingQuantity 100000000, got %d", proto.RemainingQuantity)
	}
}

func TestInvestmentTransaction_ToProto_NilLotID(t *testing.T) {
	tx := &models.InvestmentTransaction{
		ID:              1,
		InvestmentID:    10,
		WalletID:        5,
		Type:            int32(investmentv1.InvestmentTransactionType_INVESTMENT_TRANSACTION_TYPE_DIVIDEND),
		Quantity:        0,
		Price:           0,
		Cost:            100000000, // Dividend amount
		Fees:            0,
		TransactionDate: time.Now(),
		Notes:           "Dividend payment",
		LotID:           nil, // No lot for dividends
		RemainingQuantity: 0,
		CreatedAt:       time.Now(),
		UpdatedAt:       time.Now(),
	}

	proto := tx.ToProto()

	if proto.LotId != int32(0) {
		t.Errorf("Expected LotID 0 for nil LotID, got %d", proto.LotId)
	}
}
